Automatic open trivia category loading.